[package]
name = "sr"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
derivative = { version = "2" }
either = { version = "1" }
fnv = { version = "1" }
indexmap = { version = "2", features = ["serde"] }
itertools = { version = "0.13" }
log = { version = "0.4" }
multimap = { version = "0.10" }
paste = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_with = { version = "3", features = ["macros"] }
thousands = { version = "0.2" }
