[package]
name = "sr"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "crates/base" }
data = { path = "crates/data" }
excel = { path = "crates/excel" }

[workspace]
members = [
  "crates/base",
  "crates/data",
  "crates/excel",
  "crates/model",
  "crates/format",

  # 米游社数据
  "crates/bbs",
]
