[package]
name = "excel"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
educe = { version = "0.6" }
either = { version = "1" }
fnv = { version = "1" }
indexmap = { version = "2", features = ["serde"] }
multimap = { version = "0.10" }
paste = { version = "1" }

base = { path = "../base" }
data = { path = "../data" }
format = { path = "../format" }
model = { path = "../model" }
