[package]
name = "bbs"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1" }
chrono = { version = "0.4" }
hex = { version = "0.4", features = ["serde"] }
http = { version = "1" }
http-serde = { version = "2" }
num = { version = "0.4" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_repr = { version = "0.1" }
serde_with = { version = "3", features = ["chrono"] }
thiserror = { version = "2" }
uuid = { version = "1", features = ["serde"] }

base = { path = "../base" }
