[package]
name = "data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
fnv = { version = "1" }
log = { version = "0.4" }
paste = { version = "1" }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1" }

base = { path = "../base" }
model = { path = "../model" }
